Fixed the table display on mobile devices

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -11,4 +11,5 @@
 
 .main {
   padding-top: 100px;
+  max-width: 100%;
 }
