--- a/src/index.css
+++ b/src/index.css
@@ -36,4 +36,8 @@ body {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
+  @media screen and (max-width: 1280px) {
+    max-width: 100vw;
+  }
 }
